--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,14 @@ dependencies:
   image_picker: ^0.8.4+4
   file_picker: ^4.1.2
   fluttertoast: ^8.2.2
-  mapbox_gl: ^0.16.0
+#  mapbox_gl: ^0.16.0
   latlong2: ^0.8.1
   mapbox_polyline_points: ^0.0.4
+  awesome_notifications: ^0.8.2
+  another_flushbar: ^1.12.29
+  mapbox_gl: ^0.16.0
+  mapbox_gl_platform_interface: ^0.16.0
+  mapbox_gl_web: ^0.16.0
 
 
 
