--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,14 +40,24 @@ dependencies:
   image_picker: ^0.8.4+4
   file_picker: ^4.1.2
   fluttertoast: ^8.2.2
-#  mapbox_gl: ^0.16.0
   latlong2: ^0.8.1
   mapbox_polyline_points: ^0.0.4
   awesome_notifications: ^0.8.2
   another_flushbar: ^1.12.29
-  mapbox_gl: ^0.16.0
+  cloud_firestore:
+  firebase_auth:
+  google_sign_in: ^6.1.5
+  google_sign_in_android: ^6.1.20
+#  mapbox_gl: ^0.16.0
   mapbox_gl_platform_interface: ^0.16.0
-  mapbox_gl_web: ^0.16.0
+#  mapbox_gl_web: ^0.16.0
+  url_launcher: ^6.0.12
+  syncfusion_flutter_maps: ^20.3.60
+  firebase_core: ^2.24.2
+#  flutter_google_places_hoc081098: 1.2.0
+#  google_maps_webservice:
+#  google_api_headers: ^1.3.0
+  google_fonts:
 
 
 
@@ -83,7 +93,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/login.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -98,10 +109,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: 'QuickSand'
+      fonts:
+        - asset: assets/fonts/Quicksand-Bold.ttf
+        - asset: assets/fonts/Quicksand-Light.ttf
+        - asset: assets/fonts/Quicksand-Medium.ttf
+        - asset: assets/fonts/Quicksand-Regular.ttf
+        - asset: assets/fonts/Quicksand-SemiBold.ttf
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
