--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,19 @@ dependencies:
 #  google_maps_webservice:
 #  google_api_headers: ^1.3.0
   google_fonts:
+  dart_barcode:
+  qr_code_scanner:
+  share: ^2.0.4
+  qr_flutter:
+  autocomplete_textfield: ^2.0.1
+  image_gallery_saver: ^1.7.0
+  geocoding:
+  google_places_flutter:
+  path_provider:
+  lottie:
+  badges: ^3.1.2
+  icon_badge: ^1.0.0
+
 
 
 
@@ -95,6 +108,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/login.jpg
+    - assets/googleic.png
+    - assets/lottie/kids.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
